<resources>
    <string name="app_name">Espresso</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next2">Login</string>
    <string name="previous">Voltar</string>
    <string name="success">Sucesso</string>

    <string name="hello_first_fragment">Hello first fragment Gabriel</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>